# dialogue-editor

./: .gitignore  ARTICY_PLUGIN_ANALYSIS.md  App Recording 20251213 2022_writing_1.txt  README.md
ArticyXImporterForUnreal-master/: .gitignore  ArticyXImporter.uplugin  Changelog.md
ArticyXImporterForUnreal-master/Reference/: annotated.html  classes.html  dir_04b3c6c621fc7be8614e024cc04c2676.html  dir_192c4a0d98ce03a97487f98c6b911629.html  dir_28535775d78447e35924966b3a48b91e.html  dir_29327d59c044c2daea6bd873d36ea1b9.html  dir_5ea77a426b5688eea3ea20028a3c5afd.html  dir_668ef1ebda0e99e930b82bd60f352ef6.html  dir_72222e3f64a52666991a6764f37ea270.html  dir_74389ed8173ad57b461b9d623a1f3867.html  dir_7b2e3f8004bf693d77dba9d9ea8aaa5e.html  dir_7c2ee21e7c2f2441d6749c8712f05141.html  dir_7e5579fee7528d73d96f16f1e0b38892.html  dir_87f82fc70c40a1b00ce6162610262eb4.html  dir_9182f18bb16bb61b516e3746bef65ce6.html  dir_93a67d8856e51d7b42db75c50f8f2cf7.html  dir_9ca1f97393ecc4c8be3b0884d8a4c82d.html  dir_a1a13e11b7fbb2ce58938e59536d7fbf.html  dir_a46f26027f02bc3ed68d055b8d7f10ab.html  (+69 more)
DialogueEditor/: README.md
DialogueEditor.xcodeproj/: project.pbxproj
UnrealPlugin/: DialogueSystem.uplugin
dialogue-editor/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dialogue-editor/src-tauri/: Cargo.toml  tauri.conf.json
dialogue-editor/src-tauri/src/: commands.rs  export.rs  main.rs  validation.rs
dialogue-editor/src-tauri/src/graph/: id.rs  mod.rs  model.rs  types.rs
docs/: DESIGN_PHILOSOPHY.md  DISCO_ELYSIUM_ARTICY_ANALYSIS.md
(+169 files in other folders)
